2005-08-17  Mark Kettenis  <kettenis@gnu.org>

	* infcmd.c (print_return_value): Move CHECK_TYPEDEF up.  Deal with
	RETURN_VALUE_ABI_PRESERVED_ADDRESS.

	* ppc-sysv-tdep.c (do_ppc_sysv_return_value): Fix the code that
	deals with the broken GCC convention.
	
2005-08-16  Mark Kettenis  <kettenis@gnu.org>

	* ppc-sysv-tdep.c (ppc_sysv_abi_push_dummy_call): Set condition
	register appropriately for varargs functions.

2005-08-15  Kevin Buettner  <kevinb@redhat.com>

	* MAINTAINERS (ms1): New target ISA entry.  List myself as
	maintainer.

2005-08-15  Michael Snyder  <msnyder@redhat.com>
            Kevin Buettner  <kevinb@redhat.com>

	* Makefile.in (ms1-tdep.o): Add dependencies.
	* configure.tgt: Add ms1-*-* target.
	* ms1-tdep.c: New file.
	* config/ms1/ms1.mt: New file.

2005-08-15  Mark Kettenis  <kettenis@gnu.org>

	* Makefile.in (m68kbsd-tdep.o): Ad missing space.

2005-08-15  Ulrich Weigand  <uweigand@de.ibm.com>

	* s390-tdep.c (op1_lgfi, op2_lgfi, op1_agfi, op2_agfi,
	op1_afi, op2_afi, op1_algfi, op2_algfi, op1_alfi, op2_alfi,
	op1_slgfi, op2_slgfi, op1_slfi, op2_slfi): New opcode enums.
	(s390_analyze_prologue): Recognize new z9-109 instructions.

2005-08-14  Mark Kettenis  <kettenis@gnu.org>

	* solib-som.c (som_current_sos): Cast to 'gdb_byte *' where
	appropriate.

	* inf-ptrace.c (inf_ptrace_him) [PT_GET_PROCESS_STATE]: Move
	code...
	(inf_ptrace_post_startup_inferior): ...here.  New function.
	(inf_ptrace_attach) [PT_GET_PROCESS_STATE]: Move code...
	(inf_ptrace_post_attach): ...here.
	(inf_ptrace_target) [PT_GET_PROCESS_STATE]: Set
	to_post_startup_inferior and to_post_attch.

	* sparc-tdep.c (sparc_breakpoint_from_pc): Constify break_insn.

	* sparc-sol2-tdep.c (sparc_sol2_pc_in_sigtramp): Check for
	"__sighndlr".

2005-08-13  Mark Kettenis  <kettenis@gnu.org>

	* i386-linux-nat.c (fetch_register, store_register) 
	(supply_gregset, fill_gregset): Remove redundant casts.

2005-08-12  Kris Warkentin  <kewarken@qnx.com>
