@@ -1,5 +1,8 @@
 2005-08-17  Mark Kettenis  <kettenis@gnu.org>
 
+	* m68k-tdep.c (m68k_return_value): Properly return contents of
+	structures passed in memory.
+
 	* infcmd.c (print_return_value): Move CHECK_TYPEDEF up.  Deal with
 	RETURN_VALUE_ABI_PRESERVED_ADDRESS.
 
